cabal-version:       3.0
name:                test-strict-mvar
version:             1.2.0.0
synopsis:            Strict MVars for IO and IOSim
license:             Apache-2.0
license-files:       LICENSE NOTICE
copyright:           2019-2023 Input Output Global Inc (IOG).
author:              IOG Engineering Team
maintainer:          operations@iohk.io
category:            Concurrency
build-type:          Simple
bug-reports:         https://github.com/input-output-hk/io-sim/issues
tested-with:         GHC == { 8.10, 9.2, 9.4, 9.6 }

source-repository head
  type:     git
  location: https://github.com/input-output-hk/io-sim
  subdir:   test-strict-mvar

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Test.Control.Concurrent.Class.MonadMVar.Strict.WHNF
                       Test.Utils
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.19,
                       io-sim,
                       nothunks,
                       QuickCheck,
                       tasty,
                       tasty-quickcheck,
                       strict-mvar,

  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -fno-ignore-asserts
